[gd_scene load_steps=7 format=3 uid="uid://c805wiliumehw"]

[ext_resource type="Script" path="res://Menu/MainMenu.gd" id="1_sln6k"]
[ext_resource type="Texture2D" uid="uid://b4al82r02m3an" path="res://Illustration39.png" id="2_jr2jm"]

[sub_resource type="FontFile" id="FontFile_6d6il"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtr3b"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2e4wk"]
bg_color = Color(0, 0, 0, 0.784314)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mffpf"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Node2D" type="Node2D"]
script = ExtResource("1_sln6k")

[node name="ColorRect" type="Sprite2D" parent="."]
position = Vector2(587.125, 359.75)
scale = Vector2(2.19841, 1.80125)
texture = ExtResource("2_jr2jm")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -279.0
offset_top = 118.0
offset_right = 873.0
offset_bottom = 766.0
theme_override_constants/margin_left = 175
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 175
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Knoppen" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="New Game" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/New Game"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "New Game"

[node name="Level Select" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="LevelSButton" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Level Select"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Level Select"

[node name="Controls" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Controlsbutton" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Controls"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Controls"

[node name="Credits" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Creditsbutton" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Credits"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Credits"

[node name="Quit" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Quitbutton" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Quit"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/New Game/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Level Select/LevelSButton" to="." method="_on_level_s_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Controls/Controlsbutton" to="." method="_on_controlsbutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Credits/Creditsbutton" to="." method="_on_creditsbutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Quit/Quitbutton" to="." method="_on_quitbutton_pressed"]
