[gd_scene load_steps=7 format=3 uid="uid://boohrnw8wvoat"]

[ext_resource type="Script" path="res://Menu/MainMenu.gd" id="1_u6cyi"]
[ext_resource type="Texture2D" uid="uid://b4al82r02m3an" path="res://Illustration39.png" id="2_qmukw"]

[sub_resource type="FontFile" id="FontFile_6d6il"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtr3b"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2e4wk"]
bg_color = Color(0, 0, 0, 0.784314)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mffpf"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Node2D" type="Node2D"]
script = ExtResource("1_u6cyi")

[node name="ColorRect" type="Sprite2D" parent="."]
position = Vector2(619.75, 382)
scale = Vector2(2.34991, 1.9)
texture = ExtResource("2_qmukw")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -211.0
offset_top = 165.0
offset_right = 836.0
offset_bottom = 759.0
theme_override_constants/margin_left = 175
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 175
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Knoppen" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Level1" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Level1button" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Level1"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Level 1"

[node name="Level 2" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Level2button" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Level 2"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Level 2"

[node name="Level3" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Level3button" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Level3"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Level 3"

[node name="Back" type="MarginContainer" parent="MarginContainer/VBoxContainer/Knoppen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Backbutton" type="Button" parent="MarginContainer/VBoxContainer/Knoppen/Back"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontFile_6d6il")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qtr3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_2e4wk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mffpf")
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Level1/Level1button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Level 2/Level2button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Level3/Level3button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Knoppen/Back/Backbutton" to="." method="_on_backbutton_pressed"]
